--- a/references.bib
+++ b/references.bib
@@ -2194,6 +2194,16 @@
   url		= {https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Symbol}
 }
 
+@misc{mdn2024g,
+	title = {{WebSocket - Web APIs {$\vert$} MDN}},
+	author	= {{MDN}},
+	journal = {MDN Web Docs},
+	year = {2025},
+	month = feb,
+	note = {[Online; accessed 21. Feb. 2025]},
+	url = {https://developer.mozilla.org/en-US/docs/Web/API/WebSocket}
+}
+
 @Misc{		  melicharova2025,
   author	= {Melicharová, Hana},
   date		= {2025-01-09},
@@ -2979,6 +2989,37 @@
   year		= {2020},
   publisher	= {CRC Press}
 }
+
+@article{leeuw2004,
+  title={On abandoning xlisp-stat},
+  author={de Leeuw, Jan},
+  journal={Journal of Statistical Software},
+  volume={13},
+  pages={1--5},
+  year={2004}
+}
+
+@book{sievert2020,
+  title={Interactive web-based data visualization with R, plotly, and shiny},
+  author={Sievert, Carson},
+  year={2020},
+  publisher={Chapman and Hall/CRC}
+}
+
+@book{wickham2021,
+  title={Mastering shiny},
+  author={Wickham, Hadley},
+  year={2021},
+  publisher={" O'Reilly Media, Inc."}
+}
+
+@Manual{chang2024,
+    title = {shiny: Web Application Framework for R},
+    author = {Winston Chang and Joe Cheng and JJ Allaire and Carson Sievert and Barret Schloerke and Yihui Xie and Jeff Allen and Jonathan McPherson and Alan Dipert and Barbara Borges},
+    year = {2024},
+    note = {R package version 1.9.1},
+    url = {https://CRAN.R-project.org/package=shiny},
+  }
 
 @InProceedings{	  sinha2010,
   title		= {Human computer interaction},
